--- a/css/main.css
+++ b/css/main.css
@@ -54,35 +54,35 @@ img {
 }
 
 .container {
-  max-width: 1200px;
+  width: 100%;
   padding: 0 15px;
-  margin: 0 auto;
-  align-items: center;
-}
-.header .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 0px;
-}
-.hero .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
-  padding: 200px 452px;
-}
-.lorem .container {
-  display: flex;
-}
-.footer .container {
-  padding: 60px 0px;
-  display: flex;
-}
-.portfolio .container {
-  padding-bottom: 94px;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+    padding: 0 31px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 15px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1600px;
+    padding: 0 215px;
+    margin: 0 auto;
+    align-items: center;
+  }
+}
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -519,109 +519,235 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
-.navigation__logo, .navigation__logo-footer {
-  font-family: Raleway;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-  margin-right: 93px;
-  margin-bottom: 25px;
-  margin-top: 24px;
-}
-.navigation__list {
-  display: flex;
-}
-.navigation__list:focus {
-  color: var(--main-color);
-}
-.navigation__item:not(:last-child) {
-  margin-right: 46px;
-}
-.navigation__item:last-child {
-  margin-right: auto;
-}
-.navigation__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.142;
-  letter-spacing: 0.02em;
-  color: #212121;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation__link:hover, .navigation__link:focus, .navigation__link:active {
-  color: var(--main-color);
-}
+@media screen and (min-width: 320px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .navigation__logo, .navigation__logo-footer {
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.167;
+    letter-spacing: 0.03em;
+    color: #2196f3;
+    margin-bottom: 16px;
+    margin-top: 16px;
+  }
+  .navigation__list {
+    display: none;
+  }
 
-.navigation__logo--dark {
-  color: #000000;
-}
+  .header__contact {
+    display: none;
+  }
 
-.navigation__logo--light {
-  color: #ffffff;
-}
+  .navigation__logo--dark {
+    color: #000000;
+  }
 
-.menu_index {
-  color: var(--main-color);
-  position: relative;
-}
-.menu_index::after {
-  position: absolute;
-  content: "";
-  left: 0;
-  bottom: -31px;
-  width: 100%;
-  height: 4px;
-  background: var(--main-color);
-  border-radius: 2px;
-}
+  .navigation__logo--light {
+    color: #ffffff;
+  }
 
-.header__icon {
-  margin-right: 10px;
-  align-content: center;
-  vertical-align: bottom;
-  transition-property: fill;
+  .menu__modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu__modal:hover, .menu__modal:focus {
+    fill: var(--main-color);
+  }
 }
-.header__icon:hover {
-  fill: var(--main-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__mail {
-  margin-left: auto;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.172;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-  transition-property: color, fill;
-}
-.header__mail:hover, .header__mail:focus {
-  color: var(--main-color);
-  fill: var(--main-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__tel {
-  margin-left: 30px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.172;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-  transition-property: color, fill;
-}
-.header__tel:hover, .header__tel:focus {
-  color: var(--main-color);
-  fill: var(--main-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .menu__modal {
+    display: none;
+  }
 
+  .navigation__logo, .navigation__logo-footer {
+    line-height: 1.383;
+    margin-bottom: 26px;
+    margin-top: 26px;
+    margin-right: 83px;
+  }
+  .navigation__list {
+    display: flex;
+  }
+  .navigation__list:focus {
+    color: var(--main-color);
+  }
+  .navigation__item:not(:last-child) {
+    margin-right: 60px;
+  }
+  .navigation__item:last-child {
+    margin-right: auto;
+  }
+  .navigation__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .navigation__link:hover, .navigation__link:focus, .navigation__link:active {
+    color: var(--main-color);
+  }
+
+  .menu_index {
+    color: var(--main-color);
+    position: relative;
+  }
+  .menu_index::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: -31px;
+    width: 100%;
+    height: 4px;
+    background: var(--main-color);
+    border-radius: 2px;
+  }
+
+  .header__contact {
+    display: flex;
+    flex-direction: column;
+    padding: 21px 0;
+  }
+  .header__icon {
+    margin-right: 8px;
+    align-content: center;
+    vertical-align: bottom;
+    fill: #757575;
+    transition-property: fill, color;
+  }
+  .header__icon:hover {
+    fill: var(--main-color);
+    color: var(--main-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__mail {
+    margin-left: auto;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+    transition-property: color, fill;
+  }
+  .header__mail:hover, .header__mail:focus {
+    color: var(--main-color);
+    fill: var(--main-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__tel {
+    margin-top: 10px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+    transition-property: color, fill;
+  }
+  .header__tel:hover, .header__tel:focus {
+    color: var(--main-color);
+    fill: var(--main-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu__modal {
+    display: none;
+  }
+
+  .navigation__logo, .navigation__logo-footer {
+    font-size: 26px;
+    line-height: 1.384;
+    margin-right: 93px;
+    margin-top: 24px;
+    margin-bottom: 25px;
+  }
+  .navigation__list {
+    display: flex;
+  }
+  .navigation__item:not(:last-child) {
+    margin-right: 46px;
+  }
+  .navigation__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .navigation__link:hover, .navigation__link:focus, .navigation__link:active {
+    color: var(--main-color);
+  }
+
+  .menu_index {
+    color: var(--main-color);
+    position: relative;
+  }
+  .menu_index::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: -31px;
+    width: 100%;
+    height: 4px;
+    background: var(--main-color);
+    border-radius: 2px;
+  }
+
+  .header__contact {
+    display: flex;
+  }
+  .header__icon {
+    margin-right: 10px;
+    align-content: center;
+    vertical-align: bottom;
+    transition-property: fill;
+  }
+  .header__icon:hover {
+    fill: var(--main-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__mail {
+    margin-left: auto;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.172;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+    transition-property: color, fill;
+  }
+  .header__mail:hover, .header__mail:focus {
+    color: var(--main-color);
+    fill: var(--main-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__tel {
+    margin-right: 12px;
+    margin-left: 30px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.172;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+    transition-property: color, fill;
+  }
+  .header__tel:hover, .header__tel:focus {
+    color: var(--main-color);
+    fill: var(--main-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.png");
   background-size: cover;
