--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1600px;
+    max-width: 1200px;
     padding: 0 215px;
     margin: 0 auto;
     align-items: center;
@@ -620,6 +620,8 @@ img {
     align-content: center;
     vertical-align: bottom;
     fill: #757575;
+    width: 14px;
+    height: 14px;
     transition-property: fill, color;
   }
   .header__icon:hover {
@@ -676,6 +678,9 @@ img {
   .navigation__item:not(:last-child) {
     margin-right: 46px;
   }
+  .navigation__item:last-child {
+    margin-right: auto;
+  }
   .navigation__link {
     font-weight: 500;
     font-size: 14px;
@@ -711,6 +716,8 @@ img {
     align-content: center;
     vertical-align: bottom;
     transition-property: fill;
+    width: 16px;
+    height: 16px;
   }
   .header__icon:hover {
     fill: var(--main-color);
