--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./components/backdrop";
 @import "./components/footer-social-list";
 @import "./components/menu-button";
+@import "./components/modal-menu";
 @import "./components/section-header";
 @import "./components/social-list";
 
