--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ img {
     margin: 0 auto;
   }
 }
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -75,6 +76,7 @@ img {
     align-items: center;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
@@ -83,6 +85,7 @@ img {
     align-items: center;
   }
 }
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -102,6 +105,7 @@ img {
   visibility: hidden;
   pointer-events: none;
 }
+
 .is-hidden .modal {
   transform: rotate(90deg);
 }
@@ -120,6 +124,7 @@ img {
   transform: translate(-50%, -50%);
   transition: transform 2s ease-out;
 }
+
 .modal__close-btn-svg {
   display: flex;
   position: absolute;
@@ -134,6 +139,7 @@ img {
   align-items: center;
   justify-content: center;
 }
+
 .modal__form-header {
   text-align: center;
   font-weight: 700;
@@ -143,11 +149,13 @@ img {
   color: #212121;
   margin-bottom: 12px;
 }
+
 .modal__form-policy {
   align-items: center;
   display: flex;
   margin: 0 auto;
 }
+
 .modal__form-policy::before {
   display: inline-block;
   content: "";
@@ -156,6 +164,7 @@ img {
   border: 2px solid #212121;
   border-radius: 2px;
 }
+
 .modal__form-policy-checked:checked + .modal__form-policy::before {
   background-color: var(--main-color);
   border: 2px solid var(--main-color);
@@ -164,6 +173,7 @@ img {
   background-size: 14px 13px;
   background-position: center;
 }
+
 .modal__form-policy-text {
   font-size: 14px;
   line-height: 1.714;
@@ -171,15 +181,16 @@ img {
   color: #757575;
   margin-left: 8px;
 }
+
 .modal__form-policy-link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
   color: var(--main-color);
 }
+
 .modal__form-btn {
   display: block;
   font-weight: 700;
@@ -202,6 +213,7 @@ img {
   display: flex;
   flex-direction: column;
 }
+
 .modal-form__field {
   display: flex;
   flex-direction: column;
@@ -211,11 +223,13 @@ img {
   color: #757575;
   margin-bottom: 10px;
 }
+
 .modal-form__input-wrapper {
   position: relative;
   display: block;
   margin-top: 4px;
 }
+
 .modal-form__input {
   width: 100%;
   padding-top: 10px;
@@ -226,14 +240,17 @@ img {
   padding-left: 42px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-form__input:focus {
   outline: none;
   border-color: var(--main-color);
   fill: var(--main-color);
 }
+
 .modal-form__input:focus + .modal-form__icon {
   fill: var(--main-color);
 }
+
 .modal-form__icon {
   position: absolute;
   top: 50%;
@@ -242,6 +259,7 @@ img {
   display: block;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-form__message {
   width: 100%;
   box-sizing: border-box;
@@ -255,24 +273,14 @@ img {
   margin-top: 4px;
   margin-bottom: 10px;
 }
-.modal-form__message::-moz-placeholder {
-  font-size: 12px;
-  line-height: 1.166;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-.modal-form__message:-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 1.166;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
+
 .modal-form__message::placeholder {
   font-size: 12px;
   line-height: 1.166;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+
 .modal-form__message:focus {
   outline: none;
   border-color: var(--main-color);
@@ -281,6 +289,7 @@ img {
 .footer-social-list {
   display: flex;
 }
+
 .footer-social-list__link {
   display: flex;
   width: 44px;
@@ -292,10 +301,12 @@ img {
   fill: #ffffff;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .footer-social-list__link:focus, .footer-social-list__link:hover {
   fill: #ffffff;
   background-color: var(--main-color);
 }
+
 .footer-social-list__item:not(:last-child) {
   margin-right: 10px;
 }
@@ -304,11 +315,13 @@ img {
   padding-top: 94px;
   margin-bottom: 50px;
 }
+
 .buttons-menu__list {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .buttons-menu__item {
   font-weight: 500;
   font-size: 16px;
@@ -322,13 +335,58 @@ img {
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .buttons-menu__item:not(:last-child) {
   margin-right: 30px;
 }
+
 .buttons-menu__item:hover, .buttons-menu__item:focus {
   background-color: var(--main-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-menu {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  min-height: 700px;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  transform-origin: center center;
+  transform: translate(-50%, -50%);
+  transition: transform 2s ease-out;
+}
+
+.modal-menu__close-btn-svg {
+  display: flex;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  border: 1px solid red;
+  background-color: transparent;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
 }
 
 .section-header {
@@ -349,6 +407,7 @@ img {
   margin-left: 32px;
   padding-bottom: 30px;
 }
+
 .social-list__link {
   display: flex;
   width: 44px;
@@ -360,6 +419,7 @@ img {
   fill: #afb1b8;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .social-list__link:focus, .social-list__link:hover {
   fill: #ffffff;
   background-color: var(--main-color);
@@ -370,6 +430,7 @@ img {
   align-items: center;
   justify-content: space-between;
 }
+
 .clients-list__link {
   display: flex;
   width: 170px;
@@ -381,6 +442,7 @@ img {
   justify-content: center;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .clients-list__link:focus, .clients-list__link:hover {
   fill: var(--main-color);
   border: 1px solid var(--main-color);
@@ -391,14 +453,17 @@ img {
   margin: 0 auto;
   background-color: #2f303a;
 }
+
 .footer__left-side {
   margin-right: 70px;
 }
+
 .footer__center-side {
   width: 206px;
   height: 80px;
   display: flex;
 }
+
 .footer__title {
   font-weight: 700;
   font-size: 14px;
@@ -408,6 +473,7 @@ img {
   color: #ffffff;
   margin-bottom: 20px;
 }
+
 .footer__right-side {
   height: 86px;
   margin-left: 78px;
@@ -418,9 +484,11 @@ img {
   flex-direction: column;
   padding-top: 20px;
 }
+
 .navigation-footer__address {
   padding-bottom: 9px;
 }
+
 .navigation-footer__stationary {
   font-size: 14px;
   font-style: normal;
@@ -430,9 +498,11 @@ img {
   color: #ffffff;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .navigation-footer__stationary:focus, .navigation-footer__stationary:hover {
   color: var(--main-color);
 }
+
 .navigation-footer__remote {
   font-weight: 400;
   font-size: 14px;
@@ -441,6 +511,7 @@ img {
   color: #ffffff99;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .navigation-footer__remote:focus, .navigation-footer__remote:hover {
   color: var(--main-color);
 }
@@ -448,6 +519,7 @@ img {
 .footer-form {
   display: flex;
 }
+
 .footer-form__input {
   width: 358px;
   padding-top: 15px;
@@ -459,10 +531,12 @@ img {
   color: #ffffff;
   margin-right: 12px;
 }
+
 .footer-form__input:focus {
   outline: none;
   border-color: var(--main-color);
 }
+
 .footer-form__btn {
   display: flex;
   justify-content: center;
@@ -482,6 +556,7 @@ img {
   letter-spacing: 0.06em;
   color: #fff;
 }
+
 .footer-form__send-icon {
   fill: #fff;
   margin-left: 24px;
@@ -491,6 +566,7 @@ img {
 .gallery {
   padding-top: 0;
 }
+
 .gallery__list {
   display: flex;
   justify-content: space-between;
@@ -499,6 +575,7 @@ img {
 .gallery-card {
   position: relative;
 }
+
 .gallery-card__description {
   position: absolute;
   width: 100%;
@@ -537,19 +614,15 @@ img {
   .navigation__list {
     display: none;
   }
-
   .header__contact {
     display: none;
   }
-
   .navigation__logo--dark {
     color: #000000;
   }
-
   .navigation__logo--light {
     color: #ffffff;
   }
-
   .menu__modal {
     position: absolute;
     top: 10px;
@@ -560,11 +633,11 @@ img {
     fill: var(--main-color);
   }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .menu__modal {
     display: none;
   }
-
   .navigation__logo, .navigation__logo-footer {
     line-height: 1.383;
     margin-bottom: 26px;
@@ -594,7 +667,6 @@ img {
   .navigation__link:hover, .navigation__link:focus, .navigation__link:active {
     color: var(--main-color);
   }
-
   .menu_index {
     color: var(--main-color);
     position: relative;
@@ -609,7 +681,6 @@ img {
     background: var(--main-color);
     border-radius: 2px;
   }
-
   .header__contact {
     display: flex;
     flex-direction: column;
@@ -660,11 +731,11 @@ img {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
 @media screen and (min-width: 1200px) {
   .menu__modal {
     display: none;
   }
-
   .navigation__logo, .navigation__logo-footer {
     font-size: 26px;
     line-height: 1.384;
@@ -692,7 +763,6 @@ img {
   .navigation__link:hover, .navigation__link:focus, .navigation__link:active {
     color: var(--main-color);
   }
-
   .menu_index {
     color: var(--main-color);
     position: relative;
@@ -707,7 +777,6 @@ img {
     background: var(--main-color);
     border-radius: 2px;
   }
-
   .header__contact {
     display: flex;
   }
@@ -755,12 +824,14 @@ img {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
 .hero {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #2f303a66;
 }
+
 .hero__header {
   font-size: 44px;
   font-weight: 900;
@@ -769,6 +840,7 @@ img {
   color: #ffffff;
   text-align: center;
 }
+
 .hero__modal-btn {
   font-weight: 700;
   font-size: 16px;
@@ -788,15 +860,18 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
 .lorem__item:not(:last-child) {
   margin-right: 30px;
 }
+
 .lorem__svg {
   padding: 25px 100px;
   background-color: #f5f4fa;
   display: flex;
   margin-bottom: 30px;
 }
+
 .lorem__header {
   font-size: 14px;
   font-weight: 700;
@@ -805,6 +880,7 @@ img {
   color: #212121;
   margin-bottom: 10px;
 }
+
 .lorem__description {
   font-weight: 400;
   font-size: 14px;
@@ -826,20 +902,25 @@ img {
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-card__wrapper:focus .portfolio-card__overlay, .portfolio-card__wrapper:hover .portfolio-card__overlay {
+
+.portfolio-card__wrapper:focus .portfolio-card__overlay,
+.portfolio-card__wrapper:hover .portfolio-card__overlay {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transform: translatey(0);
 }
+
 .portfolio-card__top-section:hover .portfolio-card__overlay {
   transform: translatey(0);
   top: 0;
 }
+
 .portfolio-card__top-section {
   position: relative;
   overflow: hidden;
   width: 368px;
   height: 280px;
 }
+
 .portfolio-card__overlay {
   position: absolute;
   top: 0px;
@@ -849,6 +930,7 @@ img {
   transform: translatey(100%);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-card__overlay > p {
   font-size: 18px;
   line-height: 1.555;
@@ -860,13 +942,16 @@ img {
   padding-left: 45px;
   padding-bottom: 49px;
 }
+
 .portfolio-card__image {
   width: 370px;
   height: 294px;
 }
+
 .portfolio-card__bottom-section {
   padding: 20px 24px;
 }
+
 .portfolio-card__title {
   font-weight: 700;
   font-size: 18px;
@@ -875,6 +960,7 @@ img {
   margin-bottom: 4px;
   color: #212121;
 }
+
 .portfolio-card__category {
   font-size: 16px;
   line-height: 1.875;
@@ -885,6 +971,7 @@ img {
 .team {
   background-color: #f5f4fa;
 }
+
 .team__list {
   display: flex;
   justify-content: space-between;
@@ -894,12 +981,15 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+
 .team-card:not(:last-child) {
   margin-right: 30px;
 }
+
 .team-card__wrapper {
   background-color: #ffffff;
 }
+
 .team-card__name {
   font-size: 16px;
   font-weight: 500;
@@ -909,6 +999,7 @@ img {
   text-align: center;
   color: #212121;
 }
+
 .team-card__job-title {
   font-size: 16px;
   font-weight: 400;
@@ -918,4 +1009,5 @@ img {
   margin-bottom: 16px;
   text-align: center;
   color: #757575;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
