--- a/css/main.css
+++ b/css/main.css
@@ -382,11 +382,57 @@ img {
   right: 15px;
   width: 40px;
   height: 40px;
-  border: 1px solid red;
   background-color: transparent;
   cursor: pointer;
   align-items: center;
   justify-content: center;
+}
+
+.modal-menu__close-btn-svg:focus, .modal-menu__close-btn-svg:hover {
+  fill: var(--main-color);
+}
+
+.modal-menu-navigation__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.modal-menu-navigation__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-menu-navigation__link:hover, .modal-menu-navigation__link:focus {
+  color: var(--main-color);
+}
+
+.modal-menu-header__contact {
+  margin-top: 306px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-menu-header__mail {
+  margin-bottom: 32px;
+}
+
+.modal-menu-header__mail,
+.modal-menu-header__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-menu-header__mail:hover, .modal-menu-header__mail:focus,
+.modal-menu-header__tel:hover,
+.modal-menu-header__tel:focus {
+  color: var(--main-color);
 }
 
 .section-header {
