--- a/sass/components/_modal-menu.scss
+++ b/sass/components/_modal-menu.scss
@@ -15,16 +15,16 @@
   
 .modal-menu {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  // top: 50%;
+  // left: 50%;
   width: 400px;
   min-height: 700px;
   padding: 48px 40px;
   background-color: #ffffff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  transform-origin: center center;
-  transform: translate(-50%, -50%);
-  transition: transform 2s ease-out;
+  // box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  // transform-origin: center center;
+  // transform: translate(-50%, -50%);
+  // transition: transform 2s ease-out;
   &__close-btn-svg {
     display: flex;
     position: absolute;
@@ -63,21 +63,34 @@
 }
 
 
+.modal-menu_index {
+  color: var(--main-color);
+}
+
 .modal-menu-header__contact {
   margin-top: 306px;
   display: flex;
   flex-direction: column;
 }
 
-.modal-menu-header__mail{
-  margin-bottom: 32px;
-}
-
-.modal-menu-header__mail,
 .modal-menu-header__tel {
   font-weight: 500;
   font-size: 34px;
   line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+  margin-bottom: 32px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--main-color);
+  }
+}
+
+.modal-menu-header__mail{
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.167;
   letter-spacing: 0.02em;
   color: #757575;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -87,148 +100,31 @@
   }
 }
 
+
+.modal-menu-social-list__list{
+  display: flex;
+  margin-top: 64px;
+}
+
+.modal-menu-social-list__item:not(:last-child) {
+  margin-right: 20px;
+  position: relative;
+  &::after {
+    position: absolute;
+    content: "";
+    right: -10px;
+    bottom: 0;
+    width: 1px;
+    height: 22px;
+    background: rgba(33, 33, 33, 0.2);
+  }
+}
+
+.modal-menu-social-list__link{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.222;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+}
   
-  
-  //   &__form-header {
-  //     text-align: center;
-  //     font-weight: 700;
-  //     font-size: 20px;
-  //     line-height: 1.72;
-  //     letter-spacing: 0.03em;
-  //     color: #212121;
-  //     margin-bottom: 12px;
-  //   }
-  
-  //   &__form-policy {
-  //   align-items: center;
-  //   display: flex;
-  //   margin: 0 auto;
-  //     &::before {
-  //       display: inline-block;
-  //       content: "";
-  //       width: 14px;
-  //       height: 13px;
-  //       border: 2px solid #212121;
-  //       border-radius: 2px;
-  //     }
-  //   }
-  
-  //   &__form-policy-checked:checked + &__form-policy::before {
-  //     background-color: var(--main-color);
-  //     border: 2px solid var(--main-color);
-  //     border-radius: 2px;
-  //     background-image: url(../images/icons-check.svg);
-  //     background-size: 14px 13px;
-  //     background-position: center;
-  //   }
-  
-  //   &__form-policy-text {
-  //     font-size: 14px;
-  //     line-height: 1.714;
-  //     letter-spacing: 0.03em;
-  //     color: #757575;
-  //     margin-left: 8px;
-  //   }
-  
-  //   &__form-policy-link {
-  //     font-weight: 400;
-  //     font-size: 14px;
-  //     line-height: 1.714;
-  //     letter-spacing: 0.03em;
-  //     text-decoration-line: underline;
-  //     color: var(--main-color);
-  //   }
-  
-  //   &__form-btn {
-  //     display: block;
-  //     font-weight: 700;
-  //     font-size: 16px;
-  //     line-height: 1.875;
-  //     letter-spacing: 0.06em;
-  //     cursor: pointer;
-  //     padding: 10px 76px;
-  //     color: #ffffff;
-  //     background: var(--main-color);
-  //     border: 1px solid var(--main-color);
-  //     border-radius: 4px;
-  //     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  //     margin: auto;
-  //     margin-top: 30px;
-  //     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  //   }
-  // }
-  
-  
-  // .modal-form {
-  //   display: flex;
-  //   flex-direction: column;
-    
-  //   &__field {
-  //     display: flex;
-  //     flex-direction: column;
-  //     font-size: 12px;
-  //     line-height: 1.166;
-  //     letter-spacing: 0.01em;
-  //     color: #757575;
-  //     margin-bottom: 10px;
-  //   }
-  
-  //   &__input-wrapper {
-  //     position: relative;
-  //     display: block;
-  //     margin-top: 4px;
-  //   }
-  
-  //   &__input {
-  //     width: 100%;
-  //     padding-top: 10px;
-  //     padding-bottom: 10px;
-  //     box-sizing: border-box;
-  //     border: 1px solid rgba(33, 33, 33, 0.2);
-  //     border-radius: 4px;
-  //     padding-left: 42px;
-  //     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  //       &:focus {
-  //         outline: none;
-  //         border-color: var(--main-color);
-  //         fill: var(--main-color);
-  //       }
-  //   }
-  
-  //   &__input:focus + &__icon {
-  //     fill: var(--main-color);
-  //   }
-  
-  //   &__icon {
-  //     position: absolute;
-  //     top: 50%;
-  //     left: 12px;
-  //     transform: translateY(-50%);
-  //     display: block;
-  //     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  //   }
-  
-  //   &__message {
-  //     width: 100%;
-  //     box-sizing: border-box;
-  //     height: 120px;
-  //     border: 1px solid rgba(33, 33, 33, 0.2);
-  //     border-radius: 4px;
-  //     resize: none;
-  //     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  //     padding-top: 12px;
-  //     padding-left: 16px;
-  //     margin-top: 4px;
-  //     margin-bottom: 10px;
-  //       &::placeholder {
-  //         font-size: 12px;
-  //         line-height: 1.166;
-  //         letter-spacing: 0.01em;
-  //         color: rgba(117, 117, 117, 0.5);
-  //       }
-  //       &:focus {
-  //         outline: none;
-  //         border-color: var(--main-color);
-  //       }
-  //   }
-  //}
