--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,8 +6,8 @@
 @media screen and (min-width: 480px) {
   .container {
     max-width: 480px;
-    padding: 0 31px;
-    margin: 0 auto;
+    // padding: 0 31px;
+    // margin: 0 auto;
   }
 }
 
@@ -28,40 +28,41 @@
     padding: 0 215px;
     margin: 0 auto;
     align-items: center;
+  
+   .header &{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 0px;
+    }
+
+    .hero & {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-grow: 1;
+      padding: 200px 452px;
+    }
+
+    .lorem & {
+      display: flex;
+    }
+
+    .team & {
+      display: flex;
+    }
+
+    .clients & {
+      display: flex;
+    }
+
+    .footer &{
+      padding: 60px 0px;
+      display: flex;
+    }
+
+    .portfolio &{
+      padding-bottom: 94px;
+    }
   }
-}  
-
-// .container {
-//   max-width: 1200px;
-//   padding: 0 15px;
-//   margin: 0 auto;
-//   align-items: center;
-
-//     .header &{
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-//       padding-bottom: 0px;
-//     }
-
-//     .hero & {
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-//       flex-grow: 1;
-//       padding: 200px 452px;
-//     }
-
-//     .lorem & {
-//       display: flex;
-//     }
-
-//     .footer &{
-//       padding: 60px 0px;
-//       display: flex;
-//     }
-
-//     .portfolio &{
-//       padding-bottom: 94px;
-//     }
-// }
+}
