--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 480px) {
   .navigation {
     display: flex;
     align-items: center;
@@ -117,7 +117,8 @@
     &__contact {
       display: flex;
       flex-direction: column;
-      padding: 21px 0;
+      padding: 21px 15px;
+      margin-right: 30px;
     }
 
     &__icon {
@@ -128,7 +129,8 @@
       width: 14px;
       height: 14px;
       transition-property: fill, color;
-      &:hover {
+      &:hover, 
+      &:focus {
         fill: var(--main-color);
         color: var(--main-color);
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -171,14 +173,15 @@
   }
 }
 
+// --------------------------- DESKTOP ------------------------------ //
 
 @media screen and (min-width: 1200px) {
   .menu__modal {
     display: none;
   }
   .navigation {
-    // display: flex;
-    // align-items: center;
+    display: flex;
+    align-items: center;
 
     &__logo,
     &__logo-footer {
@@ -191,7 +194,7 @@
 
     &__list {
       display: flex;
-      // &:focuc {
+      // &:focus {
       //   color: var(--main-color);
       // }
     }
