--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -67,7 +67,7 @@
       // flex-direction: row;
       flex-wrap: wrap;
       column-gap: 30px;      
-      // justify-content: space-around;
+      row-gap: 30px;
     }
   }
 
