--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -16,48 +16,16 @@
 
 @media screen and (min-width: 1200px){
   .about {
+    display: flex;
     padding-top: 0;
     
     &__list {
       display: flex;
-      justify-content: space-between;
-      // gap: 30px;
+      column-gap: 30px;
     }
   }
 
   .about-card {
-    position: relative;
-    
-    &__description {
-      position: absolute;
-      width: 100%;
-      bottom: 0px;
-      font-weight: 700;
-      font-size: 14px;
-      line-height: 1.142;
-      text-align: center;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      color: #ffffff;
-      padding-top: 27px;
-      padding-bottom: 27px;
-      background: #2f303acc;
-    }
-  }
-
-
-
-  .gallery {
-    padding-top: 0;
-    
-    &__list {
-      display: flex;
-      justify-content: space-between;
-      // gap: 30px;
-    }
-  }
-
-  .gallery-card {
     position: relative;
     
     &__description {
