--- a/css/main.css
+++ b/css/main.css
@@ -569,14 +569,14 @@ img {
     pointer-events: none;
   }
 
-  .modal-menu {
+  .mobile-menu {
     position: absolute;
     width: 400px;
     min-height: 700px;
     padding: 48px 40px;
     background-color: #ffffff;
   }
-  .modal-menu__close-btn-svg {
+  .mobile-menu__close-btn-svg {
     display: flex;
     position: absolute;
     top: 10px;
@@ -588,15 +588,15 @@ img {
     align-items: center;
     justify-content: center;
   }
-  .modal-menu__close-btn-svg:focus, .modal-menu__close-btn-svg:hover {
+  .mobile-menu__close-btn-svg:focus, .mobile-menu__close-btn-svg:hover {
     fill: var(--main-color);
   }
 
-  .modal-menu-navigation__item:not(:last-child) {
+  .mobile-menu-navigation__item:not(:last-child) {
     margin-bottom: 32px;
   }
 
-  .modal-menu-navigation__link {
+  .mobile-menu-navigation__link {
     font-weight: 500;
     font-size: 40px;
     line-height: 1.175;
@@ -604,21 +604,21 @@ img {
     color: #212121;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .modal-menu-navigation__link:hover, .modal-menu-navigation__link:focus {
+  .mobile-menu-navigation__link:hover, .mobile-menu-navigation__link:focus {
     color: var(--main-color);
   }
 
-  .modal-menu__index {
+  .mobile-menu__index {
     color: var(--main-color);
   }
 
-  .modal-menu-header__contact {
+  .mobile-menu-header__contact {
     margin-top: 306px;
     display: flex;
     flex-direction: column;
   }
 
-  .modal-menu-header__tel {
+  .mobile-menu-header__tel {
     font-weight: 500;
     font-size: 34px;
     line-height: 1.176;
@@ -627,11 +627,11 @@ img {
     margin-bottom: 32px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .modal-menu-header__tel:hover, .modal-menu-header__tel:focus {
+  .mobile-menu-header__tel:hover, .mobile-menu-header__tel:focus {
     color: var(--main-color);
   }
 
-  .modal-menu-header__mail {
+  .mobile-menu-header__mail {
     font-weight: 500;
     font-size: 24px;
     line-height: 1.167;
@@ -639,20 +639,20 @@ img {
     color: #757575;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .modal-menu-header__mail:hover, .modal-menu-header__mail:focus {
+  .mobile-menu-header__mail:hover, .mobile-menu-header__mail:focus {
     color: var(--main-color);
   }
 
-  .modal-menu-social-list__list {
+  .mobile-menu-social-list__list {
     display: flex;
     margin-top: 64px;
   }
 
-  .modal-menu-social-list__item:not(:last-child) {
+  .mobile-menu-social-list__item:not(:last-child) {
     margin-right: 20px;
     position: relative;
   }
-  .modal-menu-social-list__item:not(:last-child)::after {
+  .mobile-menu-social-list__item:not(:last-child)::after {
     position: absolute;
     content: "";
     right: -10px;
@@ -662,7 +662,7 @@ img {
     background: rgba(33, 33, 33, 0.2);
   }
 
-  .modal-menu-social-list__link {
+  .mobile-menu-social-list__link {
     font-weight: 500;
     font-size: 18px;
     line-height: 1.222;
