--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,6 @@
 
 
 
-@import "./components/about";
-@import "./components/advantages";
+@import "./layout/about";
+@import "./layout/advantages";
 
