--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,7 +1,9 @@
 // tego nie mogę sprawdzić czy dobrze działa, bo nie widze zmian
 
 .about{
-    background-color: var(--central-color);
+    //background-color: var(--central-color);
+    background-color: aqua;
+
 }
 .about__title{
     font-family: var(--main-font);
