--- a/css/main.css
+++ b/css/main.css
@@ -103,16 +103,17 @@ p {
   padding-right: 30px;
 }
 
-.about__btn {
+.about-btn {
   font-family: var(--main-font);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.285;
   display: flex;
   align-items: center;
-  padding-left: 37px;
-  padding-right: 56px;
-  min-height: 44px;
+  padding-left: 42px;
+  padding-right: 29px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   color: var(--secondary-color);
   background-color: var(--white-color);
   border: 1px solid var(--white-color);
@@ -120,6 +121,13 @@ p {
   cursor: pointer;
   margin-top: 17px;
   margin-left: 30px;
+}
+
+.about-btn__icon {
+  width: 10px;
+  height: 10px;
+  margin-left: 19px;
+  margin-top: 2px;
 }
 
 .advantages {
