--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -5,4 +5,26 @@
     margin-right: auto;
     width:100%;
     padding: 121px 0px 98px 0px; // to do ewentualnej zmiany, bo każda sekcja ma inne paddingi :X
+
+    &-about {
+        padding: 0;
+    }
+
+    &-advantages {
+        padding: 0;
+    }
+
+    &-customer {
+        padding: 80px 0px 86px 0px;
+    }
+
+    &-footer {
+        padding: 113px 0px 25px 0px;
+    }
+
+    &-products {
+        padding: 121px 0px 98px 0px;
+    }
+
+
 }
